Fix tablet spacing issue with new hr padding/margin

--- a/themes/Moov2/Styles/base/_hr.scss
+++ b/themes/Moov2/Styles/base/_hr.scss
@@ -41,8 +41,8 @@ hr {
 }
 
 .hr--spacer {
-	@include rem(margin-bottom, $spacing-large);
-	@include rem(padding-top, $spacing-large);
+	@include rem(margin-bottom, $spacing-x-large);
+	@include rem(padding-top, $spacing-x-large);
 
 	@media all and (min-width: $bp-medium-large) {
 		@include rem(margin-bottom, $spacing-gigantic);
